--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css?v=17.0">
-
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Fuentes base */
         body, button, input, textarea, select {
@@ -61,13 +60,11 @@
     <section id="spotlight-section">
         <h2 id="spotlight-date-header">Hoy</h2>
         <div id="today-memory-spotlight">
-            <p class="list-placeholder">Cargando spotlight...</p>
-        </div>
+            <p class="list-placeholder">Cargando spotlight...</p> </div>
     </section>
 
     <main id="app-content">
-        <p>Loading...</p>
-    </main>
+        <p>Loading...</p> </main>
 
     <button class="crumbie-btn" id="crumbie-btn" title="Crumbie"></button>
     <footer class="footer-dock">
@@ -89,5 +86,6 @@
          </button>
     </footer>
 
-    <script type="module" src="main.js?v=4.17"></script> </body>
+    <script type="module" src="main.js?v=4.21"></script>
+    </body>
 </html>
