--- a/index.html
+++ b/index.html
@@ -15,17 +15,8 @@
     <link rel="stylesheet" href="style.css?v=2.67">
 
     <style>
-        /* Fuentes base */
-        body, button, input, textarea, select {
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        }
-
-        .aqua-button .material-icons-outlined {
-            font-size: 18px;
-            line-height: 1;
-            vertical-align: middle;
-            margin-top: -2px;
-        }
+        body, button, input, textarea, select { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+        .aqua-button .material-icons-outlined { font-size: 18px; line-height: 1; vertical-align: middle; margin-top: -2px; }
     </style>
 </head>
 <body>
@@ -37,5 +28,6 @@
     <footer class="footer-dock">...</footer>
 
     <script type="module" src="main.js?v=2.67"></script>
+    <script type="module" src="ui.js?v=2.67"></script>
 </body>
 </html>
