--- a/index.html
+++ b/index.html
@@ -4,30 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Ephemerides</title>
-
     <link rel="icon" type="image/png" href="favicon.png">
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css?v=2.67">
-
-    <style>
-        body, button, input, textarea, select { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
-        .aqua-button .material-icons-outlined { font-size: 18px; line-height: 1; vertical-align: middle; margin-top: -2px; }
-    </style>
+    <style> /* ... (estilos base) ... */ </style>
 </head>
 <body>
-    <header>...</header>
-    <nav class="month-nav">...</nav>
-    <section id="spotlight-section">...</section>
-    <main id="app-content">...</main>
-    <button class="crumbie-btn" id="crumbie-btn" title="Crumbie"></button>
-    <footer class="footer-dock">...</footer>
-
     <script type="module" src="main.js?v=2.67"></script>
-    <script type="module" src="ui.js?v=2.67"></script>
-</body>
+    </body>
 </html>
