--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=2.67">
-    <style> /* ... (estilos base) ... */ </style>
+    <link rel="stylesheet" href="style.css?v=2.68"> <style> /* ... */ </style>
 </head>
 <body>
-    <script type="module" src="main.js?v=2.67"></script>
+    <script type="module" src="main.js?v=2.68"></script>
     </body>
 </html>
