--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css?v=2.65">
-
-    <style>
+    <link rel="stylesheet" href="style.css?v=2.69"> <style>
         /* Fuentes base */
         body, button, input, textarea, select {
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -41,10 +39,7 @@
                 <span id="user-name"></span>
             </div>
             <div id="login-btn-container">
-                 <button id="login-btn" class="header-login-btn" title="Login with Google">
-                     <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill="#4285F4" d="M17.64 9.20455c0-.63864-.05727-1.25182-.16909-1.84091H9v3.48182h4.84364c-.20864 1.125-.84273 2.07818-1.77727 2.71136v2.25818h2.90864c1.70182-1.56682 2.68409-3.87409 2.68409-6.61045z"/><path fill="#34A853" d="M9 18c2.43 0 4.47182-.80591 5.96273-2.18045l-2.90864-2.25818c-.80591.54364-1.83682.86591-2.94.86591-2.27318 0-4.20727-1.53318-4.9-3.58227H1.07182v2.33318C2.56636 16.3 5.56 18 9 18z"/><path fill="#FBBC05" d="M4.1 10.71c-.22-.64-.35-1.32-.35-2.03s.13-.139.35-2.03V4.31H1.07C.38 5.67 0 7.29 0 9.03s.38 3.36 1.07 4.72l3.03-2.33v.03z"/><path fill="#EA4335" d="M9 3.57955c1.32136 0 2.50773.45455 3.44091 1.34591l2.58136-2.58136C13.46318.891364 11.4259 0 9 0 5.56 0 2.56636 1.70182 1.07182 4.31l3.02818 2.33318C4.79273 5.11273 6.72682 3.57955 9 3.57955z"/></svg>
-                </button>
-            </div>
+                 </div>
         </div>
     </header>
 
@@ -89,5 +84,5 @@
          </button>
     </footer>
 
-    <script type="module" src="main.js?v=2.65"></script> </body>
+    <script type="module" src="main.js?v=2.69"></script> </body>
 </html>
