--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Ephemerides</title>
 
-    <link rel="icon" type="image/png" href="favicon.png">
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css?v=2.65">
+    <link rel="stylesheet" href="style.css?v=17.0">
 
     <style>
         /* Fuentes base */
@@ -89,5 +84,7 @@
          </button>
     </footer>
 
-    <script type="module" src="main.js?v=2.65"></script> </body>
+    <script type="module" src="main.js?v=4.17"></script>
+
+</body>
 </html>
