--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Ephemerides</title>
+    
+    <!-- PWA Meta Tags -->
+    <meta name="description" content="Tu diario de recuerdos, memorias y efemérides">
+    <meta name="theme-color" content="#4aa2d8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Ephemerides">
 
+    <!-- Icons -->
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="manifest" href="manifest.json">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <link rel="stylesheet" href="style-base.css?v=2.92">
-    <link rel="stylesheet" href="style-layout.css?v=2.92">
-    <link rel="stylesheet" href="style-components.css?v=2.92">
-    <link rel="stylesheet" href="style-views.css?v=2.92">
-    <link rel="stylesheet" href="style-modals.css?v=2.92">
+    <link rel="stylesheet" href="style-base.css?v=2.93">
+    <link rel="stylesheet" href="style-layout.css?v=2.93">
+    <link rel="stylesheet" href="style-components.css?v=2.93">
+    <link rel="stylesheet" href="style-views.css?v=2.93">
+    <link rel="stylesheet" href="style-modals.css?v=2.93">
 
     <style>
         .aqua-button .material-icons-outlined {
@@ -88,6 +98,31 @@
           </button>
     </footer>
 
-    <script type="module" src="main.js?v=2.92"></script> 
+    <script>
+        // Registrar Service Worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/ephe8/sw.js')
+                    .then(registration => {
+                        console.log('[PWA] Service Worker registrado:', registration.scope);
+                        
+                        // Detectar actualizaciones del SW
+                        registration.addEventListener('updatefound', () => {
+                            const newWorker = registration.installing;
+                            newWorker.addEventListener('statechange', () => {
+                                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                    console.log('[PWA] Nueva versión disponible');
+                                }
+                            });
+                        });
+                    })
+                    .catch(err => {
+                        console.log('[PWA] Error registrando Service Worker:', err);
+                    });
+            });
+        }
+    </script>
+
+    <script type="module" src="main.js?v=2.93"></script> 
 </body>
 </html>
